# Anirisuto

./: README.md  async_client.py  query.py  setup.cfg  setup.py  sync_client.py
Anirisuto/: async_client.py  sync_client.py
Anirisuto/parsers/: parse_anime.py  parse_character.py  parse_manga.py
queries/get/: anime.graphql  character.graphql  manga.graphql
queries/srch/: anime.graphql  character.graphql  manga.graphql
