
[metadata]
name = Anirisuto
version = 1.0.1
url = https://github.com/Drum3X/Anirisuto
author = Drum3X
author_email = doramuekusu@gmail.com 
description = A wrapper for anilist.
description_file = README.md
license_files =
    LICENSE
license = Apache
classifiers =
    Framework :: AsyncIO
    Programming Language :: Python :: 3

[options]
install_requires =
    requests
    aiohttp
python_requires = >=3.10
zip_safe = no
include_package_data = yes

[options.package_data]
* = *.graphql 
